--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -936,10 +936,10 @@ right: 0;
             <a href="#posts">Design Journal</a>
         </nav>
         <nav class="links">
-            <a href="#">LinkedIn</a>
-            <a href="#">LINE</a>
-            <a href="#ideation">Resume</a>
-            <a href="mailto@peter.roper.jp@gmail.com">Email</a>
+            <a href="https://www.linkedin.com/in/peter-roper">LinkedIn</a>
+            <!--a href="#">LINE</a-->
+            <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf">Resume</a>
+            <a href="mailto:peter.roper.jp@gmail.com">Email</a>
         </nav>    
     </div>
     <!-- NAVI ENDS -->
