--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -222,6 +222,9 @@ text-decoration: none;
 a:hover{
 text-decoration: underline;
 }
+@media only screen and (max-width: 992px) {
+    .navi nav.links{ font-size: 1.6em; }
+}
 @media only screen and (max-width: 424px) {
     h2{ font-size: 2.4em;  }
     h4{ font-size: 1.8em;  }
@@ -246,6 +249,9 @@ opacity: 68%;
 }
 .section p span{
     opacity: 100%;
+}
+@media only screen and (max-width: 992px) {
+    .navi nav.links{ opacity: 92%;   }
 }
 /*/////////////////////////////////////////////////////////////*/
 h3 a,
@@ -614,7 +620,8 @@ width: calc(33% - 50px); /* Adjust the width as needed */
 display: none!important;
 }
 .navi nav.links{
-    display: block!important;
+width: 100%;
+display: block!important;
 }
 .container{
 padding: 40px;
@@ -664,6 +671,10 @@ flex-direction: column;
 gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
+#posts{
+border: 0;
+margin-right: -16px;
+}
 #posts .post{
 width: 324px;
  }
