--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -671,6 +671,14 @@ flex-direction: column;
 gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
+#showcase h3 a > span{
+    line-height: 30px;
+    padding: 0 4px 0 8px;
+}
+#showcase h3 a > span .icn{
+    font-size: 20px;
+}
+/*/////////////////////////////////////////////////////////////*/
 #posts{
 border: 0;
 margin-right: -16px;
