--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -537,14 +537,13 @@ padding: 8px;
 #showcase h3 a{
     line-height: 30px;
     position: relative;
-    display: block;
+    display: flex;
+    justify-content: space-between;
 }
 #showcase h3 a > span{
     line-height: 30px;
     padding: 0 8px 0 12px;
-    position: absolute;
-    top: 0;
-    right: 0;
+    flex: 1;
 }
 #showcase h3 a > span .icn{
     display: inline-block;
