--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -26,6 +26,16 @@
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
+document.getElementById("link").addEventListener("click", function(event) {
+    event.preventDefault(); // Prevent default hyperlink behavior
+    
+    var content = document.getElementById("content");
+    content.classList.add("fade"); // Apply fade-out class
+    
+    setTimeout(function() {
+      window.location.href = event.target.href; // Navigate to the URL after fade-out
+    }, 500); // 500ms matches the transition duration in the CSS
+});
  $(document).ready(function() {
   
     $(".body, .navi nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
@@ -183,6 +193,13 @@ li{ list-style-position: inside;}
 }
 html, body {
   scroll-behavior: smooth;
+}
+.fade-out {
+opacity: 1;
+transition: opacity 0.5s ease-out;
+}
+.fade-out.fade {
+opacity: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
@@ -726,11 +743,11 @@ right: 0;
     <div id="showcase" class="section">
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Optimizing the Initial Experience <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
+            <h3><a id="link" href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Optimizing the Initial Experience <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" class="img"></a>
         </div>
         <div id="content-navigation" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy2.1.png);">Enhancing Content Browsing <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
+            <h3><a id="link" href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy2.1.png);">Enhancing Content Browsing <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"></a>
         </div>
         <div id="adventurecards" class="segment">
