--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -560,7 +560,6 @@ padding: 8px;
 #showcase h3 a > span{
     line-height: 30px;
     padding: 0 8px 0 12px;
-    flex: 1;
 }
 #showcase h3 a > span .icn{
     display: inline-block;
@@ -684,6 +683,8 @@ gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase h3 a > span{
+    width: 84px;
+    height: 30px;
     line-height: 30px;
     padding: 0 4px 0 8px;
 }
