--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -535,6 +535,9 @@ width: 104px;
 margin: 0;
 display: block;
 }
+#posts .post .img{
+    margin-bottom: 0!important;
+}
 #posts p{
 display: flex;
 flex-direction: column;
@@ -642,8 +645,7 @@ flex-direction: column;
 width: 100%;
 }
 /*/////////////////////////////////////////////////////////////*/
-#posts .post .img,
-#posts .post img{
+#posts .post .img-wrap{
 width: 74px;
 }
 #posts .post{
