--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -214,7 +214,7 @@ text-rendering: optimizeLegibility;
 }
 }
 h1,h2, h3,h4{
-font-weight: 700;
+font-weight: 400;
 line-height: 140%; 
 }
 h2 { font-size: 2.2em; }
@@ -279,13 +279,13 @@ color: #FFF;
     color: #346672;
 }
 /*/////////////////////////////////////////////////////////////*/
-.special > p,
+/*.special > p,
 p.l span,
 h3,
 .navi nav.selected a:first-of-type,
 .navi nav .selected{
 font-weight: bold;
-}
+}*/
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
