--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -676,6 +676,13 @@ padding: 24px;
 .container{
 padding: 16px;
 }
+.section{
+padding: 0 0 24px 0;
+margin: 0 0 24px 0;
+}
+.segment{
+padding-bottom: 24px;
+}
 #project ul,
 #pain-points ol,
 .special ul,
