--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -536,6 +536,7 @@ margin: 0;
 display: block;
 }
 #posts .post .img{
+    background-size: 100% auto;
     margin-bottom: 0!important;
 }
 #posts p{
