--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -235,7 +235,7 @@ a:hover{
 text-decoration: underline;
 }
 @media only screen and (max-width: 992px) {
-    .navi nav.links{ font-size: 1.6em; }
+    .navi nav.links a{ font-size: 1.6em; }
 }
 h1, h2, h3,h4,.navi nav a {  
   font-weight: 400;
@@ -636,6 +636,10 @@ display: none!important;
 .navi nav.links{
 width: 100%;
 display: block!important;
+}
+.navi nav a{
+margin-bottom: 12px;
+padding: 0;
 }
 .container{
 padding: 40px;
