--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -28,6 +28,21 @@
 <script>
  $(document).ready(function() {
 
+    var links = document.querySelectorAll(".fade-link");
+
+  links.forEach(function(link) {
+    link.addEventListener("click", function(event) {
+      event.preventDefault();
+      
+      var content = document.getElementById("content");
+      content.classList.add("fade");
+      
+      setTimeout(function() {
+        window.location.href = event.target.href;
+      }, 500);
+    });
+  });
+  
   $(".body, .navi nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
   $(window).on("load", function() {
     $(".body").fadeIn(800); 
@@ -562,7 +577,7 @@ gap: 8px;
 <body>
 <div class="container">
 <div class="navi sticky-element">
-    <a href="https://peteroper.github.io/portfolio/casestudies/" class="back"><span class="icn material-icons">arrow_back</span></a>
+    <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
     <nav class="selected">
         <a href="#overview" class="selected">Overview</a>
         <a href="#project">Project</a>
