--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -574,6 +574,10 @@ padding: 8px;
     vertical-align: middle;
 }
 /*/////////////////////////////////////////////////////////////*/
+#showcase .img{
+    margin-bottom: 0;
+}
+/*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
 width: 100%;
 padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
