--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -240,7 +240,7 @@ a:hover{
 text-decoration: underline;
 }
 @media only screen and (max-width: 992px) {
-    .navi nav.links a{ font-size: 1.6em; }
+    .navi nav.links a{ font-size: 1.8em; }
 }
 h1, h2, h3,h4,.navi nav a {  
   font-weight: 400;
@@ -646,7 +646,7 @@ display: none!important;
 width: 100%;
 display: block!important;
 }
-.navi nav a{
+.navi nav.links a{
 margin-bottom: 12px;
 padding: 0;
 }
