--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -26,21 +26,23 @@
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-     var links = document.querySelectorAll(".fade-link");
+document.addEventListener("DOMContentLoaded", function () {
+  const content = document.getElementById("fade-container");
+  const fadeLinks = document.querySelectorAll(".fade-link");
 
-links.forEach(function(link) {
-  link.addEventListener("click", function(event) {
-    event.preventDefault();
-    
-    var content = document.getElementById("fade-container");
-    content.classList.add("fade");
-    
-    setTimeout(function() {
-      window.location.href = event.target.href;
-    }, 500);
+  fadeLinks.forEach(function (link) {
+    link.addEventListener("click", function (event) {
+      event.preventDefault();
+
+      content.style.opacity = 0; // Start fading out
+
+      // Wait for the transition to complete before following the link
+      setTimeout(function () {
+        window.location.href = link.href;
+      }, 500); // Same duration as the transition in CSS
+    });
   });
 });
-
  $(document).ready(function() {
 
     $(".body, .navi nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
