--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -379,6 +379,12 @@ flex: 1;
 /* PAIN POINTS */
 
 /*/////////////////////////////////////////////////////////////*/
+#pain-points h4{
+    margin-bottom: 16px;
+}
+#pain-points h3{
+    margin-bottom: 4px;
+}
 #pain-points ol{
     list-style-type: none;
     display: flex;
