--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -214,6 +214,9 @@ text-decoration: none;
 a:hover{
 text-decoration: underline;
 }
+h1,h2,h3,h4{
+    font-weight: 400;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
