--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -574,11 +574,13 @@ border-style: solid;
 padding-bottom: 24px;
 }
 #project ul,
-#pain-points ol,
 .special ul,
 #pain-points ol{
 flex-direction: column;
-gap: 8px;
+gap: 12px;
+}
+#pain-points ol{
+    gap: 16px;
 }
 /*/////////////////////////////////////////////////////////////*/
 .special ul{
@@ -586,7 +588,7 @@ gap: 0;
 }
 .special ul li{
 padding: 12px;
-margin-bottom: 8px;
+margin-bottom: 12px;
 }
 .special ul li:last-of-type{
 margin-bottom: 0;
