--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -717,13 +717,13 @@ gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase h3 a > span{
-    width: 84px;
+    width: 68px;
     height: 30px;
     line-height: 30px;
     padding: 0 4px 0 8px;
 }
 #showcase h3 a > span .icn{
-    font-size: 20px;
+display: none;
 }
 #adventurecards,
 #pulse-football{
