--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -699,7 +699,7 @@ margin-right: -24px;
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 576px) {
 .container{
-padding: 16px;
+padding: 20px;
 }
 .section{
 padding: 0 0 24px 0;
@@ -725,17 +725,15 @@ gap: 12px;
 #showcase h3 a > span .icn{
 display: none;
 }
+#posts,
 #adventurecards,
 #pulse-football{
-margin-right: -16px;
+margin-right: -20px;
 }
 /*#showcase .scrollable{
 padding-bottom: 96%;
 }*/
 /*/////////////////////////////////////////////////////////////*/
-#posts{
-margin-right: -16px;
-}
 #posts .post{
 width: 324px;
  }
@@ -744,7 +742,7 @@ display: none;
 }
 #posts .posts-scrollable{
 width: 100%;
-height: 286px;
+height: 280px;
 flex-shrink: 0;
 overflow-x: auto;
 overflow-y: hidden;
