--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -735,7 +735,7 @@ padding-bottom: 96%;
 }*/
 /*/////////////////////////////////////////////////////////////*/
 #posts .post{
-width: 324px;
+width: 340px;
  }
 #posts nav{
 display: none;
@@ -753,12 +753,15 @@ position: relative;
 #posts .posts-scrollable > div{
 height: 100%;
 display: flex;
-gap: 16px;
+gap: 8px;
 flex-direction: row;
 position: absolute;
 top: 0;
 left: 0;
 right: 0;
+}
+#posts .post > div{
+padding-right: 0;
 }
 #posts .posts-scrollable .tab-container{
     display: flex!important;
