--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -219,6 +219,8 @@ text-rendering: optimizeLegibility;
 h1,h2, h3,h4{
 line-height: 140%; 
 }
+h1{ font-size: 4.8em; letter-spacing: -1.92px; }
+h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
 h2, h3, p.l { font-size: 1.8em; }
 .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
