--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -396,6 +396,7 @@ line-height: 110%;
 .header .img{
 width: 312px;
 height: 248px;
+padding-bottom: 0;
 background-size: 100% auto;
 flex-shrink: 0;
 }
@@ -686,6 +687,7 @@ width: calc(33% - 50px); /* Adjust the width as needed */
 background-size: 125% auto;
 }
 .header div div{
+padding: 104px 24px 68px 24px;
 background-size: 100% auto;
 }
 .header div div{
