--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -26,7 +26,7 @@
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-document.addEventListener("DOMContentLoaded", function () {
+/*document.addEventListener("DOMContentLoaded", function () {
   const content = document.getElementById("fade-container");
   const fadeLinks = document.querySelectorAll(".fade-link");
 
@@ -42,7 +42,7 @@ document.addEventListener("DOMContentLoaded", function () {
       }, 500); // Same duration as the transition in CSS
     });
   });
-});
+});*/
  $(document).ready(function() {
 
     $(".body, .navi nav, .navi nav.links, .navi .back").css("display", "none"); // Ensure container is hidden initially
