--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -185,8 +185,10 @@ line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
 }
-h1, h2, h3, h3 a, p.l, p.l span{
+h1{
 font-family: 'Merriweather','Lora';
+} 
+h2, h3, h3 a, p.l, p.l span{
 font-family: 'Lora';
 }
 li{ list-style-position: inside;}
@@ -687,7 +689,7 @@ width: calc(33% - 50px); /* Adjust the width as needed */
 background-size: 125% auto;
 }
 .header div div{
-padding: 104px 24px 68px 24px;
+padding: 68px 24px 68px 24px;
 background-size: 100% auto;
 }
 .header div div{
