--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -1060,7 +1060,10 @@ padding-right: 0;
 
     <div class="navi sticky-element">
         <nav>
-            <a href="#intro" class="selected">About</a>
+            <a href="#intro" class="selected">Introduction</a>
+        </nav>
+        <nav>
+            <a href="#posts">Design Journal</a>
         </nav>
         <nav>
             <a href="#showcase">Showcase</a>
@@ -1069,13 +1072,14 @@ padding-right: 0;
             <a href="#adventurecards">Adventure Cards</a>
             <a href="#pulse-football">Pulse Football</a>
         </nav>
-        <nav>
-            <a href="#posts">Design Journal</a>
+        <nav class="about links">
+            <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About <span class="icn material-icons">chevron_right</span></a>
+            <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume <span class="icn material-icons">chevron_right</span></a>
         </nav>
         <nav class="links">
-            <a href="https://www.linkedin.com/in/peter-roper">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/peter-roper" target="_blank">LinkedIn</a>
             <!--a href="#">LINE</a-->
-            <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf">Resume</a>
+            
             <a href="mailto:peter.roper.jp@gmail.com">Email</a>
         </nav>    
     </div>
