--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -152,7 +152,7 @@ body, html {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: transparent;
+    background-color: black;
     overflow: hidden;
 }
 
@@ -160,7 +160,7 @@ body, html {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: #346672;
     animation: slideUp 2s ease-in-out forwards, shrinkToCircle 2s ease-in-out 2s forwards;
 }
 
