--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -172,6 +172,8 @@ body, html {
 }
 
 img.hidden {
+    width: 300px;
+    height: 300px;
     opacity: 0;
     animation: fadeIn 2s ease-in-out 2s forwards;
 }
