--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -43,6 +43,12 @@
     });
   });
 });*/
+document.addEventListener('DOMContentLoaded', function() {
+    const ripple = document.querySelector('.water-ripple');
+    ripple.style.animation = 'none';
+    ripple.offsetHeight; // Trigger a reflow to restart the animation
+    ripple.style.animation = null;
+});
  $(document).ready(function() {
 
     setTimeout(function() {
@@ -148,104 +154,24 @@ body, html {
     overflow: hidden;
 }
 
-.animation-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: #346672;
-    overflow: hidden;
-}
-
-.black-screen {
+.water-ripple {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #000;
-    animation: slideUp 2s ease-in-out forwards;
+    background-color: #3498db; /* Change to your desired water color */
+    animation: ripple 3s ease-out;
+    transform-origin: 50% 100%;
+    opacity: 0.6;
 }
 
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-img.hidden {
-    width: 300px;
-    height: 300px;
-    opacity: 0;
-    animation: fadeIn 2s ease-in-out 2s forwards;
-}
-
-.circle {
-    position: absolute;
-    width: 0;
-    height: 0;
-    background-color: transparent;
-    border-radius: 50%;
-    animation: pulseCircle 2s ease-in-out 4s forwards, growCircle 2s ease-in-out 6s forwards, moveUpToAvatar 2s ease-in-out 8s forwards;
-}
-
-@keyframes slideUp {
-    to {
-        transform: translateY(-100%);
-    }
-}
-
-@keyframes fadeIn {
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes pulseCircle {
+@keyframes ripple {
     0% {
-        width: 0;
-        height: 0;
-        background-color: transparent;
-    }
-    50% {
-        width: 100px;
-        height: 100px;
-        background-color: #ff5733; /* Your desired color */
+        transform: scaleY(0.1);
+        opacity: 0.6;
     }
     100% {
-        width: 0;
-        height: 0;
-        background-color: transparent;
-    }
-}
-
-@keyframes shrinkToCircle {
-    to {
-        width: 100px;
-        height: 100px;
-        background-color: transparent;
-        transform: translate(-50%, -50%);
-    }
-}
-
-@keyframes growCircle {
-    0% {
-        width: 100px;
-        height: 100px;
-        background-color: transparent;
-        transform: translate(-50%, -50%);
-    }
-    100% {
-        width: 200px;
-        height: 200px;
-        background-color: transparent;
-        transform: translate(-50%, -50%);
-    }
-}
-
-@keyframes moveUpToAvatar {
-    to {
-        top: 10px;
-        left: 10px;
-        transform: translate(0, 0);
+        transform: scaleY(1);
+        opacity: 0;
     }
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -951,15 +877,11 @@ padding-right: 0;
 </style>
 </head>
 <body>
-    <div class="animation-container">
-        <div class="black-screen"></div>
-        <div class="content">
-            <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar2.png" alt="Image" class="hidden">
-            <div class="circle"></div>
-        </div>
-    </div>
+    <div class="water-ripple"></div>
+
 
     <!--div class="header"><div>
+
         <div>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
             <h1>Peter Roper</h1>
