--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -158,7 +158,7 @@ body, html {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #3498db; /* Change to your desired water color */
+    background-color: #346672; /* Change to your desired water color */
     animation: ripple 3s ease-out;
     transform-origin: 50% 100%;
     opacity: 0.6;
