--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -175,13 +175,13 @@ body, html {
 
 @keyframes wave {
     0% {
-        border-radius: 0% 0% 50% 50%;
+        border-radius: 0% 0% 25% 25%;
     }
     50% {
         border-radius: 50% 50% 0% 0%;
     }
     100% {
-        border-radius: 0% 0% 50% 50%;
+        border-radius: 0% 0% 0 0;
     }
 }
 /*/////////////////////////////////////////////////////////////*/
