--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -160,8 +160,8 @@ body, html {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #346672; /* Background color for the moving element */
-    animation: moveUp 3s linear forwards, wave 3s ease-in-out forwards;
+    background-color: #346672;
+    animation: moveUp 3s linear forwards;
 }
 
 @keyframes moveUp {
@@ -170,18 +170,6 @@ body, html {
     }
     100% {
         transform: translateY(0);
-    }
-}
-
-@keyframes wave {
-    0% {
-        border-radius: 0% 0% 25% 25%;
-    }
-    50% {
-        border-radius: 50% 50% 0% 0%;
-    }
-    100% {
-        border-radius: 0% 0% 0 0;
     }
 }
 /*/////////////////////////////////////////////////////////////*/
