--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -154,6 +154,9 @@ body, html {
     height: 100%;
     background-color: black; /* Container is black */
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .wavy-element {
@@ -162,6 +165,49 @@ body, html {
     height: 100%;
     background-color: #346672;
     animation: moveUp 3s linear forwards;
+}
+
+.animated-image {
+    max-width: 350px;
+    max-height: 350px;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards, scaleDown 1s ease-in-out 2s forwards, scaleUp 1s ease-in-out 4s forwards, scaleDownAgain 1s ease-in-out 6s forwards;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes scaleDown {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.9);
+    }
+}
+
+@keyframes scaleUp {
+    0% {
+        transform: scale(0.9);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes scaleDownAgain {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.9);
+    }
 }
 
 @keyframes moveUp {
@@ -876,6 +922,7 @@ padding-right: 0;
 </head>
 <body>
     <div class="anime-container">
+        <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar2.png" alt="Image" class="animated-image">
         <div class="wavy-element"></div>
     </div>
     <!--div class="header"><div>
