--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -922,8 +922,9 @@ padding-right: 0;
 </head>
 <body>
     <div class="anime-container">
-        <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar2.png" alt="Image" class="animated-image">
-        <div class="wavy-element"></div>
+        <div class="wavy-element">
+            <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar2.png" alt="Image" class="animated-image">
+        </div>
     </div>
     <!--div class="header"><div>
 
