--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -841,23 +841,11 @@ padding-right: 0;
 </style>
 </head>
 <body>
-    <div class="anime-container">
-        <div class="wavy-element">
-            <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar2.png" alt="Image" class="animated-image">
-        </div>
-    </div>
-    <div id="titlebar">
-        <span class="avatar"></span>
-        <h1>Peter Roper</h1>
-    </div>
-    <!--div class="header"><div>
+<div id="titlebar">
+    <span class="img avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
+    <h1>Peter Roper</h1>
+</div>
 
-        <div>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
-            <h1>Peter Roper</h1>
-            <h2>Product Designer</h2>
-        </div>
-    </div></div-->
 <div id="fade-container" class="container">
 
 <div class="body">
