--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -842,7 +842,7 @@ padding-right: 0;
 </head>
 <body>
 <div id="titlebar">
-    <span class="img avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
+    <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
     <h1>Peter Roper</h1>
 </div>
 
@@ -1061,6 +1061,7 @@ padding-right: 0;
     <!-- body ENDS -->
 
     <div class="navi sticky-element">
+        <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
         <nav>
             <a href="#intro" class="selected">Introduction</a>
         </nav>
