--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -402,7 +402,11 @@ display: flex!important;
 /* NAVI */
 /*/////////////////////////////////////////////////////////////*/
 .navi .avatar{
+    width: 100%;
+    display: block;
     padding-bottom: 88%;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
 }
 .navi nav{
     margin-bottom: 12px;
