--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -826,9 +826,13 @@ padding-right: 0;
 </style>
 </head>
 <body>
-<div id="titlebar">
-    <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
-    <h1>Peter Roper</h1>
+<div class="titlebar">
+    <span class="avatar"></span>
+    <h1>PR.</h1>
+    <nav class="about links">
+        <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About <span class="icn material-icons">chevron_right</span></a>
+        <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume <span class="icn material-icons">chevron_right</span></a>
+    </nav>
 </div>
 
 <div id="fade-container" class="container">
@@ -1046,7 +1050,6 @@ padding-right: 0;
     <!-- body ENDS -->
 
     <div class="navi sticky-element">
-        <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
         <nav>
             <a href="#intro" class="selected">Introduction</a>
         </nav>
@@ -1060,14 +1063,9 @@ padding-right: 0;
             <a href="#adventurecards">Adventure Cards</a>
             <a href="#pulse-football">Pulse Football</a>
         </nav>
-        <nav class="about links">
-            <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About <span class="icn material-icons">chevron_right</span></a>
-            <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume <span class="icn material-icons">chevron_right</span></a>
-        </nav>
         <nav class="links">
             <a href="https://www.linkedin.com/in/peter-roper" target="_blank">LinkedIn</a>
             <!--a href="#">LINE</a-->
-            
             <a href="mailto:peter.roper.jp@gmail.com">Email</a>
         </nav>    
     </div>
