--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -826,9 +826,13 @@ padding-right: 0;
 </style>
 </head>
 <body>
-<div id="titlebar">
-    <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
-    <h1>Peter Roper</h1>
+<div class="titlebar">
+    <span class="avatar"></span>
+    <h1>PR.</h1>
+    <nav class="about links">
+        <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About <span class="icn material-icons">chevron_right</span></a>
+        <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume <span class="icn material-icons">chevron_right</span></a>
+    </nav>
 </div>
 
 <div id="fade-container" class="container">
@@ -854,7 +858,6 @@ padding-right: 0;
         </div>
         <div id="research" class="segment special">
             <h4>Values</h4>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
             <ul>
                 <li>
                     <h3>Composition & Layout</h3>
