--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -601,6 +601,14 @@ padding: 16px;
 </head>
 <body>
 <div id="fade-container" class="container">
+<div class="titlebar">
+    <span class="avatar"></span>
+    <h1>PR.</h1>
+    <nav class="about links">
+        <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About <span class="icn material-icons">chevron_right</span></a>
+        <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume <span class="icn material-icons">chevron_right</span></a>
+    </nav>
+</div>
 <div class="navi sticky-element">
     <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
     <nav class="selected">
