--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -838,25 +838,27 @@ padding-right: 0;
 <div id="fade-container" class="container">
 
 <div class="body">
-    <div id="about" class="section">
+    <div id="experience" class="section">
         <div class="segment">
             <p class="l b">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p>
             <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
             <p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI.  Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p>
         </div>
         
-        <div class="segment">
+        <div id="skills" class="segment">
             <h4>UX Skills</h4>
             <span class="img"></span>
             <p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p>
         </div>
-        <div id="personality" class="segment">
+    </div>
+    <div id="about" class="section">
+        <div id="Personality" class="segment">
             <h4>Personality</h4>
             <span class="img"></span>
             <p>I have a curious and adaptive mindset which means I spend a lot of my time in and out of work exploring and iterating solutions to problems. I often anticipate needs and respond with early outlines and step by step plans to overcome the challenge.</p>
             <p>Whilst being creative minded I am also very methodical and organised. I value hard work and believe increasing performance in the short term leads to better outcomes. I also value humor, good relationships and paying an interest to the people in my life. Empathy and communication are another way i engage creativity.</p>
         </div>
-        <div id="research" class="segment special">
+        <div id="values" class="segment special">
             <h4>Values</h4>
             <ul>
                 <li>
@@ -1022,20 +1024,21 @@ padding-right: 0;
 
     <div class="navi sticky-element">
         <nav class="selected">
-            <a href="#about">About</a>
-            <a href="#initial-experience">Initial Experience</a>
-            <a href="#content-navigation">Content Navigation</a>
-            <a href="#adventurecards">UX Matrix</a>
-            <a href="#pulse-football">Resume</a>
+            <a href="#experience">Experience</a>
+            <a href="#career">Past Experience</a>
+            <a href="#skills">Skills</a>
+            <a href="#goals">Goals</a>
         </nav>
-        <nav class="about links">
-            <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About <span class="icn material-icons">chevron_right</span></a>
-            <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume <span class="icn material-icons">chevron_right</span></a>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#personality">Personality</a>
+            <a href="#values">Values</a>
+            <a href="#interests">Interests</a>
+            <a href="#journal">Latest Writings</a>
         </nav>
         <nav class="links">
             <a href="https://www.linkedin.com/in/peter-roper" target="_blank">LinkedIn</a>
             <!--a href="#">LINE</a-->
-            
             <a href="mailto:peter.roper.jp@gmail.com">Email</a>
         </nav>    
     </div>
