--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -572,52 +572,56 @@ padding: 8px;
     flex-direction: column;
 }
 /*/////////////////////////////////////////////////////////////*/
-/* SHOWCASE */
+
+/* SPECIAL */
+
 /*/////////////////////////////////////////////////////////////*/
-#showcase h3 a{
-    line-height: 30px;
-    position: relative;
+.special{
+    margin-bottom: 36px;
+}
+.special > p{
+    margin-bottom: 12px;
+}
+.special ul{
     display: flex;
-    justify-content: space-between;
+    gap: 16px;
 }
-#showcase h3 a > span{
-    line-height: 30px;
-    padding: 0 8px 0 12px;
+.special ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
 }
-#showcase h3 a > span .icn{
+.special ul li{
+  margin-bottom: 16px; /* Adjust the margin as needed */
+  padding: 20px;
+  border-radius: 4px;
+  list-style-type: none;
+}
+.special ul li h3:before{
+    width: 20px;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 4px;
     display: inline-block;
-    vertical-align: middle;
+    margin-right: 8px;
+}
+.special ul li:nth-child(1) h3:before{
+    content: '1';
+}
+.special ul li:nth-child(2) h3:before{
+    content: '2';
+}
+.special ul li:nth-child(3) h3:before{
+    content: '3';
+}
+.special ul li:nth-child(4) h3:before{
+    content: '4';
 }
 /*/////////////////////////////////////////////////////////////*/
-#showcase .img{
-    margin-bottom: 0;
-}
-/*/////////////////////////////////////////////////////////////*/
-#showcase .scrollable{
-width: 100%;
-padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
-flex-shrink: 0;
-overflow-x: auto;
-overflow-y: hidden;
--webkit-overflow-scrolling: touch;
-overflow: -moz-scrollbars-horizontal;
-position: relative;
-}
-#showcase .scrollable > div{
-height: 100%;
-padding-right: 40px;
-display: flex;
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-}
-#showcase .scrollable div div{
-padding: 40px;
-}
-#showcase .scrollable div p{
-width: 440px;
-margin-bottom: 12px;
+.special.v1{
+    padding: 24px;
+    border-radius: 4px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* DESKTOP */
@@ -769,23 +773,19 @@ flex-direction: column;
 gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
-#showcase h3 a > span{
-    width: 68px;
-    height: 30px;
-    line-height: 30px;
-    padding: 0 4px 0 8px;
+.special ul{
+gap: 0;
 }
-#showcase h3 a > span .icn{
-display: none;
+.special ul li{
+padding: 12px;
+margin-bottom: 12px;
 }
-#posts,
-#adventurecards,
-#pulse-football{
-margin-right: -20px;
+.special ul li:last-of-type{
+margin-bottom: 0;
 }
-/*#showcase .scrollable{
-padding-bottom: 96%;
-}*/
+.special.v1{
+padding: 16px;
+}
 /*/////////////////////////////////////////////////////////////*/
 #posts .post{
 width: 340px;
@@ -854,7 +854,6 @@ padding-right: 0;
     <div id="about" class="section">
         <div id="Personality" class="segment">
             <h4>Personality</h4>
-            <span class="img"></span>
             <p>I have a curious and adaptive mindset which means I spend a lot of my time in and out of work exploring and iterating solutions to problems. I often anticipate needs and respond with early outlines and step by step plans to overcome the challenge.</p>
             <p>Whilst being creative minded I am also very methodical and organised. I value hard work and believe increasing performance in the short term leads to better outcomes. I also value humor, good relationships and paying an interest to the people in my life. Empathy and communication are another way i engage creativity.</p>
         </div>
