--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -847,6 +847,10 @@ padding-right: 0;
         
         <div id="skills" class="segment">
             <h4>UX Skills</h4>
+            <p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p>
+        </div>
+        <div id="goals" class="segment">
+            <h4>Goals</h4>
             <span class="img"></span>
             <p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p>
         </div>
