--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -851,7 +851,7 @@ padding-right: 0;
         </div>
         <div id="goals" class="segment">
             <h4>Goals</h4>
-            <span class="img"></span>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
             <p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p>
         </div>
     </div>
