--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -1039,6 +1039,9 @@ padding-right: 0;
             <a href="#interests">Interests</a>
             <a href="#journal">Latest Writings</a>
         </nav>
+        <nav class="selected">
+            <a href="#posts">Design Journal</a>
+        </nav>
         <nav class="links">
             <a href="https://www.linkedin.com/in/peter-roper" target="_blank">LinkedIn</a>
             <!--a href="#">LINE</a-->
