--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -474,6 +474,12 @@ margin-bottom: 8px;
 max-width: 668px;
 margin: bottom 16px;
 }
+.tab-container{
+display: none!important;
+}
+.tab-container.tab-selected{
+display: flex!important;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* IMGS */
 /*/////////////////////////////////////////////////////////////*/
@@ -489,11 +495,21 @@ margin: bottom 16px;
   background-repeat: no-repeat;
   background-size: auto 100%;
 }
-.tab-container{
-display: none!important;
+/*/////////////////////////////////////////////////////////////*/
+.gallery-container {
+  overflow-x: auto;
+  white-space: nowrap;
 }
-.tab-container.tab-selected{
-display: flex!important;
+.gallery {
+    width: 100%;
+  display: inline-block;
+  white-space: nowrap;
+}
+.gallery .wrap{
+  display: inline-block;
+  width: 84%; 
+  margin-right: 12px; 
+  position: relative;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* INTRO */
@@ -884,7 +900,13 @@ padding-right: 0;
         </div>
         <div id="interests" class="segment">
             <h4>Interests</h4>
-            <span class="img"></span>
+            <div class="gallery-container">
+                <div class="gallery">
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
+              </div>
+            </div>
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
         </div>
     </div>
