--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -1048,6 +1048,7 @@ padding-right: 0;
     <!-- body ENDS -->
 
     <div class="navi sticky-element">
+        <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
         <nav class="selected">
             <a href="#experience">Experience</a>
             <a href="#career">Past Experience</a>
